--- a/clase14/styles/styles.css
+++ b/clase14/styles/styles.css
@@ -2,7 +2,21 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+
+.header1 {
+    background: #D1891C;
+    padding: 10px;
+}
+
+.header2 {
+    color: white;
+    background: #00669F;
+    padding: 10px;
+}
+
+
 
 .cont-card {
     display: flex;
@@ -10,8 +24,38 @@
     flex-wrap: wrap;
 }
 
+.sticky-button {
+    background: #00669F;
+    width: 63px;
+    height: 61px;
+    font-size: 2rem;
+    color: white;
+    border-radius: 50%;
+    position: fixed;
+    right: 10px;
+    top: 670px;
+    border: none;
+}
 
+footer {
+    color: white;
+    background: #00669F;
+    height: 85px;
+    display: flex;
+    line-height: 44px;
+    text-align: center;
+    position: relative;    
+}
 
+footer p {
+    margin: auto;
+}
+
+footer i {
+    position: absolute;
+    right: 20px;
+    top: 12px;
+}
 /* desging pattern: mobile firts
 
 0-480
@@ -26,30 +70,37 @@
 
 /*mobile*/
 .card {
-    width: 30vw;
-    min-width: 432px;
+    background: #F3F3F3;
+    width: 25vw;
+    min-width: 389px;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 15px;
+    margin: 40px;
+    border-radius: 30px ;
 }
 
 .card button {
     margin-top: 16px;
     padding: 8px 24px;
+    border: none;
+    color: white;
+    background-color: #00669F;
+    margin-bottom: 10px;
 }
 
 .card p {
     line-height: 24px;
+    padding: 10px;
 }
 
 .footer-img {
     width: 100%;
-    max-width: 1440px;
+    /*max-width: 1440px;
     min-width: 432px;
     object-fit: cover;
-    object-position: center;
+    object-position: center;*/
     border-radius: 30px 30px 0px 0px;
    
 }
@@ -61,13 +112,17 @@
     object-fit: cover;
     object-position: center;
     position: absolute;
-    top: 175px;
+    top: 9em;
 }
 
 .card h1 {
-    font-size: 3.5rem;
+    font-size: 1.5rem;
     margin-top: 60px;
 
+}
+
+.card p {
+    font-size:1rem;
 }
 
 /*tablet*/
